# national_memographic

./: .pylintrc  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  test.yml
data/template/: drakeposting.json  tuxedo_winnie_the_pooh.json
national_memographic/: __main__.py  _args.py  _bot.py  _image.py  _url.py  common.py  data.py  meme.py  template.py
national_memographic/_bot/: bot.py  error.py
national_memographic/_cli/: _error.py  bot_command.py  cli_group.py  generate_command.py  ls_command.py
national_memographic/_cli/native/: _bot_command.py  _generate_command.py  _ls_command.py  cli.py
national_memographic/_cli/twitter/: _generate_command.py  _ls_command.py  _pass_session.py  cli.py  context.py
national_memographic/_twitter/: _api.py  account.py  direct_message.py  media.py  session.py  tweet.py  user.py
test/: test_args.py
