[tool.poetry]
name = "national_memographic"
version = "0.1.0"
description = "The one and only Twitter meme bot"
authors = ["hacksparr0w <hacksparr0w@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Wand = "^0.6.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
