[tool.poetry]
name = "national_memographic"
version = "0.1.0"
description = "The one and only Twitter meme bot"
authors = ["hacksparr0w <hacksparr0w@protonmail.com>"]
license = "MIT"
include = ["data"]

[tool.poetry.dependencies]
python = "^3.7"
Wand = "^0.6.6"
tweepy = "^3.10.0"
click = "^8.0.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
meme = "national_memographic.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
